--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -3,3 +3,6 @@ MONGODB_URI=mongodb://localhost:27017/voca
 GROQ_API_KEY=your_groq_api_key_here
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
+JWT_SECRET=your_jwt_secret_min_32_chars_here
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
