--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
     "groq-sdk": "^0.5.0",
     "jsonwebtoken": "^9.0.3",
