--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "pnpm --parallel -r dev",
     "dev:backend": "pnpm --filter @voca/backend dev",
     "dev:app": "pnpm --filter @voca/app dev",
+    "dev:web": "pnpm --filter @voca/web dev",
     "build": "pnpm -r build",
     "lint": "pnpm -r lint"
   },
