--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@voca/shared": "workspace:*",
+    "i18next": "^25.8.13",
+    "i18next-browser-languagedetector": "^8.2.1",
     "lucide-react": "^0.400.0",
     "poyraz-ui": "^0.2.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.2.0",
