feat(app): add auto-update and electron-builder packaging
- electron-updater with user-confirmed download flow
- electron-builder config (dmg/nsis, GitHub Releases publish)
- 3-stage toast notifications (available → downloading → restart)
- Clickable version label in sidebar for manual update check
- GitHub Actions workflow for tag-based release (mac + win)
- Dev mode noop handlers to prevent IPC errors

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@ dist/
 !.env.example
 *.local
 .DS_Store
-out/
 *.log
 uploads/
 
-# Electron
+# Electron build artifacts
+out/
+app-build/
 release/
 
 # Claude Code personal settings
