--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,13 @@ jobs:
         with:
           version: 9
 
+      - name: Set version from tag
+        run: |
+          VERSION=${GITHUB_REF_NAME#v}
+          npm --no-git-tag-version --prefix packages/app version $VERSION
+          npm --no-git-tag-version version $VERSION
+        shell: bash
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
