--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,8 +1,19 @@
 PORT=3100
 MONGODB_URI=mongodb://localhost:27017/voca
+REDIS_URL=redis://localhost:6379
+CORS_ORIGIN=http://localhost:5173
+
 GROQ_API_KEY=your_groq_api_key_here
 DEEPGRAM_API_KEY=your_deepgram_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
+
 JWT_SECRET=your_jwt_secret_min_32_chars_here
 GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+PADDLE_API_KEY=your_paddle_api_key_here
+PADDLE_CLIENT_TOKEN=your_paddle_client_token_here
+PADDLE_WEBHOOK_SECRET=your_paddle_webhook_secret_here
+PADDLE_PRICE_PRO=pri_your_pro_price_id_here
+PADDLE_PRICE_MAX=pri_your_max_price_id_here
+PADDLE_SANDBOX=true
