--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "build": "tsc",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.30",
     "@deepgram/sdk": "^4.11.3",
+    "@paddle/paddle-node-sdk": "^3.6.0",
     "@voca/shared": "workspace:*",
     "ai": "^6.0.97",
     "cors": "^2.8.5",
@@ -31,8 +34,12 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.14.9",
+    "@types/supertest": "^7.2.0",
+    "mongodb-memory-server": "^11.0.1",
+    "supertest": "^7.2.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "vitest": "^4.0.18"
   }
 }
