--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -56,6 +56,7 @@
     }
   },
   "dependencies": {
+    "@paddle/paddle-js": "^1.6.2",
     "@tanstack/react-query": "^5.49.2",
     "@voca/shared": "workspace:*",
     "axios": "^1.7.2",
