feat(web): wire download links and fix navbar
- Add DOWNLOADS constant to @voca/shared with GitHub latest release URLs
- Wire all download buttons (Hero, FinalCta, Pricing) to release URLs
- Navbar download button scrolls to #download section
- Replace hardcoded GITHUB_URL in Hero with SOCIALS.github
- Add navbar.faq i18n key to all 12 locales
- Use versionless artifactName in electron-builder (Voca-Setup.exe, Voca.dmg)

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -45,9 +45,13 @@
       "target": "nsis",
       "icon": "../../assets/icon.png"
     },
+    "dmg": {
+      "artifactName": "Voca.${ext}"
+    },
     "nsis": {
       "oneClick": true,
-      "perMachine": false
+      "perMachine": false,
+      "artifactName": "Voca-Setup.${ext}"
     },
     "publish": {
       "provider": "github",
