--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -37,7 +37,9 @@
       "protocols": [
         {
           "name": "Voca",
-          "schemes": ["voca"]
+          "schemes": [
+            "voca"
+          ]
         }
       ]
     },
@@ -85,7 +87,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "electron": "^31.1.0",
     "electron-builder": "^25.1.8",
-    "electron-vite": "^2.3.0",
+    "electron-vite": "^5.0.0",
     "postcss": "^8.4.39",
     "tailwindcss": "^4.2.0",
     "typescript": "^5.4.5"
