--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -69,12 +69,14 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "electron-updater": "^6.3.9",
+    "i18next": "^25.8.13",
     "lucide-react": "^0.400.0",
     "poyraz-ui": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.71.2",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^16.5.4",
     "tailwind-merge": "^2.3.0",
     "uiohook-napi": "^1.5.4",
     "zustand": "^4.5.4"
