--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -22,6 +22,8 @@
     "express-rate-limit": "^8.2.1",
     "google-auth-library": "^10.5.0",
     "groq-sdk": "^0.5.0",
+    "i18next": "^25.8.13",
+    "i18next-http-middleware": "^3.9.2",
     "ioredis": "^5.9.3",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.4.3",
