feat(backend): add centralized Axiom logging
- Add @axiomhq/js with logger module (info/warn/error → Axiom, local → console only)
- Replace all console.log/warn/error with structured logger calls
- Add flush on shutdown and after 500 errors
- Add AXIOM_TOKEN and AXIOM_DATASET env vars (optional)

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^3.0.30",
+    "@axiomhq/js": "^1.4.0",
     "@deepgram/sdk": "^4.11.3",
     "@paddle/paddle-node-sdk": "^3.6.0",
     "@voca/shared": "workspace:*",
