--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,4 +1,5 @@
 PORT=3100
+BASE_URL=http://localhost:3100/api
 MONGODB_URI=mongodb://localhost:27017/voca
 REDIS_URL=redis://localhost:6379
 CORS_ORIGIN=http://localhost:5173
