fix: add zip target for macOS auto-update support

--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -30,7 +30,7 @@
       }
     ],
     "mac": {
-      "target": "dmg",
+      "target": ["dmg", "zip"],
       "icon": "../../assets/icon.icns",
       "hardenedRuntime": true,
       "gatekeeperAssess": false,
