--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -74,7 +74,7 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
-    "electron-store": "^10.1.0",
+    "electron-store": "8.2.0",
     "electron-updater": "^6.3.9",
     "i18next": "^25.8.13",
     "lucide-react": "^0.400.0",
