--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -77,6 +77,7 @@
     "electron-updater": "^6.3.9",
     "i18next": "^25.8.13",
     "lucide-react": "^0.400.0",
+    "node-machine-id": "^1.1.12",
     "poyraz-ui": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
